# memori

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: integration.yml  publish-npm.yml  ts-ci.yml
benchmarks/perf/: conftest.py  test_hosted_recall_benchmarks.py
core/: Cargo.toml
core/.cargo/: config.toml
core/bindings/node/: Cargo.toml  build.js  package-lock.json  package.json
core/bindings/node/src/: bridge.rs  engine.rs  lib.rs  types.rs
core/src/: lib.rs
core/src/augmentation/: pipeline.rs
core/src/retrieval/: pipeline.rs
core/src/runtime/: worker.rs
docs/: troubleshooting.md
docs/memori-byodb/: index.mdx
docs/memori-byodb/concepts/: advanced-augmentation.mdx  architecture.mdx  async-patterns.mdx  cli-quickstart.mdx  how-memory-works.mdx  knowledge-graph.mdx  multi-user-support.mdx
docs/memori-byodb/contribute/: development-setup.mdx  overview.mdx
docs/memori-byodb/dashboard/: api-keys.mdx
docs/memori-byodb/databases/: cockroachdb.mdx  mongodb.mdx  mysql.mdx  oracle.mdx  overview.mdx  postgres.mdx  sqlite.mdx  tidb.mdx
docs/memori-byodb/getting-started/: installation.mdx  quick-start.mdx  use-cases.mdx
docs/memori-byodb/llm/: agno.mdx  anthropic.mdx  aws-bedrock.mdx  gemini.mdx  langchain.mdx  nebius.mdx  openai.mdx  overview.mdx  pydantic-ai.mdx  xai-grok.mdx
docs/memori-byodb/support/: faq.mdx  troubleshooting.mdx
docs/memori-cloud/: index.mdx
docs/memori-cloud/concepts/: advanced-augmentation.mdx  architecture.mdx  async-patterns.mdx  how-memory-works.mdx  knowledge-graph.mdx  multi-user-support.mdx
docs/memori-cloud/dashboard/: analytics.mdx  memories.mdx  overview.mdx  playground.mdx
docs/memori-cloud/getting-started/: installation.mdx  quick-start.mdx  (+1 more)
examples/tidb/: README.md  main.py  pyproject.toml
memori/: __init__.py  _config.py  _exceptions.py
memori-ts/: .gitignore  .npmignore  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
memori-ts/examples/: README.md
memori-ts/scripts/: sync-native.js
memori-ts/src/: memori.ts
memori-ts/tests/: memori.test.ts  setup.ts
memori/llm/: _base.py
memori/memory/: _manager.py  recall.py
memori/search/: _core.py
memori/storage/: __init__.py
tests/: test_init.py
tests/llm/: test_llm_base.py
tests/memory/: test_manager_enterprise_retry.py  test_recall.py
tests/storage/: test_storage_builder.py  test_storage_registry.py
(+80 files in other folders)
