[package]
name = "engine-orchestrator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.86"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
fastembed = { version = "5", default-features = false, features = ["hf-hub-native-tls", "image-models", "ort-download-binaries"] }
hf-hub = "0.5"
log = "0.4"
# Force a vendored build of OpenSSL so transitive dependencies (reqwest,
# hf-hub, ort-sys, ...) link against a statically built libssl instead of the
# system package. This keeps native-tls semantics (OS trust store is still
# honored on macOS/Windows) while making manylinux/Windows wheel builds
# self-contained.
openssl-sys = { version = "0.9", features = ["vendored"] }
parking_lot = "0.12"
# Uses reqwest's default TLS backend (native-tls) so the OS trust store is
# honored. Do not enable `rustls-tls` — it bypasses corporate proxies/SSL
# inspection that customers rely on.
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0"
sha2 = "0.10"
thiserror.workspace = true
tokenizers = "0.22"
tokio.workspace = true

[workspace]
members = [
    "bindings/node",
    "bindings/python",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
rust-version = "1.86"

[workspace.dependencies]
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
pyo3 = "0.27"
napi = "2"
napi-derive = "2"
napi-build = "2"
