[package]
name = "node-bindings"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dashmap = "6.1.0"
engine-orchestrator = { path = "../.." }
napi = { workspace = true, features = ["napi4", "tokio_rt", "async"] }
napi-derive.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build.workspace = true
